Remove of Immutable

--- a/articles/3.md
+++ b/articles/3.md
@@ -9,37 +9,34 @@ Stav aplikace jsou data, která představují podstatu toho, co uživatel vidí 
 
 V běžné webové aplikaci - např. Wikipedii, je stav aplikace to, na jaké stránce + odstavci jsem. V Eshopu je stav aplikace obvykle jaký produkt si prohlížím + co mám v košíku. V naší hře bude stav aplikace jaké krychle jsou na scéně.
 
-**Redux** je Framework pro držení stavu aplikace a manipulaci s ním. V single page aplikacích využívajících Redux se stav aplikace obvykle ukládá do čistých javascriptových objektů nebo "Immutable objektů":https://facebook.github.io/immutable-js/. Já využiji Immutable objekt. Takto bude vypadat defaultní stav hry:
+**Redux** je Framework pro držení stavu aplikace a manipulaci s ním. V single page aplikacích využívajících Redux se stav aplikace obvykle ukládá do čistých javascriptových objektů nebo "Immutable objektů":https://facebook.github.io/immutable-js/. Já využiji čisté JS objekty. Takto bude vypadat defaultní stav hry:
 /--code js
-const defaultState = Immutable.fromJS({
+const defaultState = {
     blocks: [{id:'My first block!!!',position:{x:0,y:0,z:0}}]
-});
+};
 \--
 *Poznámka: Natočení a vzdálenost kamery by také měla být součástí stavu aplikace. To je však trochu obtížnější na implementaci a tím pádem tomu věnuji celý článek někdy v budoucnu.*
 
-Na to aby nám dnešní ukázka fungovala, musíme přidat knihovny **Redux**, **Immutable.js** a knihovnu pro generování **uuid**. V dnešním díle to udělám v hlavičce html. V některém z dalších dílů použiji balíčkovací systém "npm":https://www.npmjs.com.
+Na to aby nám dnešní ukázka fungovala, musíme přidat knihovny **Redux** a knihovnu pro generování **uuid**. V dnešním díle to udělám v hlavičce html. V některém z dalších dílů použiji balíčkovací systém "npm":https://www.npmjs.com.
 /--code js
 <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.6.0/redux.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/immutable/3.8.1/immutable.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/node-uuid/1.4.8/uuid.min.js"></script>
 \--
 
-Stavem aplikace se manipuluje pomocí funkce zvané **reducer**. Do ní předáme **původní stav + akci** a ven vypadne **stav nový**. Akce je prostý JS objekt, který má klíč **type**. Ten pojmenovává podstatu toho, jak se stav změní. Pro naši hru budeme mít zatím 2 typy akcí: **přidávání nové krychle** a **smazání krychle**.
+Stavem aplikace se manipuluje pomocí funkce zvané **reducer**. Do ní předáme **původní stav + akci** a ven vypadne **stav nový**. Je velmi důležité vyrobit stav nový a neupravovat stav původní, abychom nad aplikací neztratili kontrolu. Akce je prostý JS objekt, který má klíč **type**. Ten pojmenovává podstatu toho, jak se stav změní. Pro naši hru budeme mít zatím 2 typy akcí: **přidávání nové krychle** a **smazání krychle**.
 /--code js
 function stateReducer(state, action) {
     switch (action.type) {
 
-        case 'BLOCK_DELETE':
-            return state
-                .update('blocks', (blocks)=>blocks.filter((block)=>block.get('id') !== action.blockId));
+        case BLOCK_ADD:
+            return {
+                       blocks: state.blocks.concat([action.newBlock])
+                   }
 
-        case 'BLOCK_ADD':
-            let newBlockImmutable = Immutable.fromJS(action.newBlock);
-            if (newBlockImmutable.get('color') === 'current') {
-                newBlockImmutable = newBlockImmutable.set('color', state.get('currentColor'));
-            }
-            return state
-                .update('blocks', (blocks)=>blocks.push(newBlockImmutable));
+        case BLOCK_DELETE:
+            return {
+                       blocks: state.blocks.filter((block)=>block.id!==action.blockId)
+                   }
 
         default:
             return state;
@@ -107,7 +104,7 @@ function updateScene(scene, state) {
     const materialNormal = scene.materials.find(material=>material.name==='material-normal');
     
     //Potom ji naplním podle aktuálního stavu.
-    state.get('blocks').toJS().forEach(block=>{
+    state.blocks.forEach(block=>{
         const newBox = BABYLON.Mesh.CreateBox(block.id, 1, scene);
         newBox.material = materialNormal;
         newBox.position = new BABYLON.Vector3(block.position.x, block.position.y, block.position.z);
