--- a/articles/2.md
+++ b/articles/2.md
@@ -145,9 +145,6 @@ canvas.addEventListener("pointermove", onPointerMove, false);
 \--
 
 
-
-
-Celou dnešní ukázku máš na "GitHubu":https://github.com/hejny/web-game pod tagem **0.2.0**. Nebo dole pod článkem na stažení.
-
+Rozdělanou hru si můžeš stáhnout pod článkem, nebo jít do "Git repozitáře":https://github.com/hejny/web-game kde najdeš nejnovější verzi.
 Nyní se při každém pohybu myši aktualizuje hover efekt.
-V dalším díle ukážu, jak můžu držet stav celé aplikace lépe, než přímo ve scéně.
+V "dalším díle":https://www.itnetwork.cz/javascript/3d-hra/stav-hry ukáži, jak můžu držet stav celé aplikace lépe, než přímo ve scéně.
