--- a/articles/3.md
+++ b/articles/3.md
@@ -28,15 +28,15 @@ Stavem aplikace se manipuluje pomocí funkce zvané **reducer**. Do ní předám
 function stateReducer(state, action) {
     switch (action.type) {
 
-        case BLOCK_ADD:
+        case 'BLOCK_ADD':
             return {
-                       blocks: state.blocks.concat([action.newBlock])
-                   }
+                blocks: state.blocks.concat([action.newBlock])
+            };
 
-        case BLOCK_DELETE:
+        case 'BLOCK_DELETE':
             return {
-                       blocks: state.blocks.filter((block)=>block.id!==action.blockId)
-                   }
+                blocks: state.blocks.filter((block)=>block.id!==action.blockId)
+            };
 
         default:
             return state;
@@ -160,4 +160,5 @@ src
 index.html
 \--
 
-Teď máme v Redux store uložený stav hry. Rozdělanou hru si můžeš stáhnout pod článkem, nebo jít do "Git repozitáře":https://github.com/hejny/web-game a pod tagem **0.3.0** najdeš, co jsme v tomto díle napsali. V dalším díle ukáži, jaké featury díky tomu mohu docílit.
+Rozdělanou hru si můžeš stáhnout pod článkem, nebo jít do "Git repozitáře":https://github.com/hejny/web-game kde najdeš nejnovější verzi.
+V dalším díle ukáži, jaké featury díky tomu mohu docílit.
