--- a/articles/4.md
+++ b/articles/4.md
@@ -1,5 +1,140 @@
-V "minulém díle":https://www.itnetwork.cz/javascript/******* jsem ukazoval, co to je stav aplikace a jak ho držet.
-V tomto díle ukážu, ***********.
+V "minulém díle":https://www.itnetwork.cz/javascript/3d-hra/stav-hry jsem ukazoval, co to je stav aplikace a jak ho držet.
+V tomto díle ukáži, jaké výhody nám to přináší.
+
+
+##Logování
+Ve chvíli, kdy držíme stav aplikace na jednom místě, můžeme všechny jeho změny velmi elegantně logovat a tím vidět, co se v aplikaci děje. Vytvoříme si funkci wrapReducer.
+/--code js
+function wrapReducer(reducer){
+    //Kontrola pro případ, že bych byl v prostředí node.js
+    if('groupCollapsed' in console){
+        return function (oldState,action) {
+            console.groupCollapsed(`==[${action.type}]==>`);
+            console.log(oldState);
+            console.log('||');
+            console.log('||');
+
+            console.log(`[${action.type}]`, action);
+            const newState = reducer(oldState, action);
+
+            console.log('||');
+            console.log('||');
+            console.log('\\/');
+            console.log(newState);
+
+            console.groupEnd();
+            return newState;
+        }
+    }else{
+
+        return reducer;
+    }
+}
+\--
+
+Potom vytváříme store tak, že reducer nejdříve "obalíme" touto logovací funkcí.
+/--code js
+const store = Redux.createStore(wrapReducer(stateReducer), defaultState);
+\--
+
+Nyní se po každé akci do konzole prohlížeče vypíše, co se stalo + stav předtím a potom.
+
+
+##URL
+/--code js
+function loadState(key){
+    try {
+        const serializedState = localStorage.getItem(key);
+        if (serializedState === null) {
+            return null;
+        }
+        return JSON.parse(serializedState);
+    } catch (err) {
+        return null;
+    }
+}
+\--
+
+/--code js
+saveState(state){
+    const key = uuid.v4();
+    const serializedState = JSON.stringify(state);
+    localStorage.setItem(key,serializedState);
+    return key;
+}
+\--
+
+/--code js
+function createStateFromUri(uri){
+    const key = uri.split('#',2)[1];
+    const state = loadState(key);
+    if(state){
+        return state;
+    }else{
+        return {};
+    }
+}
+\--
+
+/--code js
+function createUriFromState(state){
+    var key = saveState(state);
+    return `#${key}`;
+}
+\--
+
+
+
+
+
+
+
+##Zpět a vpřed
+
+
+
+
+
+
+let store;
+const root = document.getElementById("root");
+const canvas = document.getElementById("scene");
+//canvas.style = style;
+const engine = new BABYLON.Engine(canvas, true);
+const scene = createScene(canvas, engine, ()=>store);
+engine.runRenderLoop(function () {
+    scene.render();
+});
+window.addEventListener("resize", function () {
+    engine.resize();
+});
+
+function render() {
+    updateScene(scene, store.getState());
+}
+
+function initializeStore() {
+    store = createStore(wrapReducer(stateReducer), createStateFromUri(document.location.toString()));
+    store.subscribe(()=> {
+        const state = store.getState();
+        const uri = createUriFromState(state);
+        const title = createTitleFromState(state);
+        document.title = title;
+        history.pushState({}, title, uri);
+    });
+    store.subscribe(render);
+    render();
+
+
+    ReactDOM.render(
+        <Provider store={store}>
+            <Root />
+        </Provider>,
+        root
+    )
+}
+window.onpopstate = initializeStore;
+initializeStore();
 
 
 
@@ -10,4 +145,10 @@ V tomto díle ukážu, ***********.
 
 
 
-Teď máme ********. Rozdělanou hru si můžeš stáhnout pod článkem, nebo jít do "Git repozitáře":https://github.com/hejny/web-game a pod tagem **0.******.0** najdeš, co jsme v tomto díle napsali. V dalším díle ukáži, ************.
+
+
+
+
+
+Rozdělanou hru si můžeš stáhnout pod článkem, nebo jít do "Git repozitáře":https://github.com/hejny/web-game kde najdeš nejnovější verzi.
+V dalším díle ukáži, jak jednotlivé Javascriptové soubory spojit pomocí nástroje WebPack.
