--- a/articles/5.md
+++ b/articles/5.md
@@ -1,5 +1,5 @@
 V "minulém díle":https://www.itnetwork.cz/javascript/******* jsem ukazoval, **********.
-V tomto díle ukážu, ***********.
+V tomto díle ukáži, ***********.
 
 
 
