--- a/articles/4.md
+++ b/articles/4.md
@@ -41,6 +41,8 @@ Nyní se po každé akci do konzole prohlížeče vypíše, co se stalo + stav p
 
 
 ##URL
+Ve webové aplikaci by bylo rozumné, aby se každá změna zaznamenávala do URL adresy v prohlížeči. Do URL však nemůžeme uložit příloš mnoho informací a tak můžeme stav ukládat do LocalStorage pod náhodným IDčkem a až dané ID dávat do URL adresy.
+
 /--code js
 function loadState(key){
     try {
@@ -71,7 +73,7 @@ function createStateFromUri(uri){
     if(state){
         return state;
     }else{
-        return {};
+        return defaultState;
     }
 }
 \--
@@ -83,28 +85,53 @@ function createUriFromState(state){
 }
 \--
 
+Nyní budeme poslouchat změny na store nejen kvůli vykreslování, ale i proto, abychom si nový stav uložili do LocalStorage a URL. 
+/--code js
+const store = Redux.createStore(stateReducer, createStateFromUri(document.location.toString()));
 
-
-
-
-
-
-##Zpět a vpřed
-
-
-
-
-
-
-let store;
-const root = document.getElementById("root");
 const canvas = document.getElementById("scene");
-//canvas.style = style;
 const engine = new BABYLON.Engine(canvas, true);
-const scene = createScene(canvas, engine, ()=>store);
+const scene = createScene(canvas, engine);
+
+function render() {
+    updateScene(scene, store.getState());
+}
+
+store.subscribe(render);
+render();
+
+
+store.subscribe(()=> {
+    const state = store.getState();
+    const uri = createUriFromState(state);
+    const title = createTitleFromState(state);
+    document.title = title;
+    history.pushState({}, title, uri);
+});
+
 engine.runRenderLoop(function () {
     scene.render();
 });
+
+
+window.addEventListener("resize", function () {
+    engine.resize();
+});
+\--
+
+
+##Zpět a vpřed
+Nyní ukládáme stav do URL a při načtení hry ho z něj načítáme, ale pokud chceme URL plně využít, musíme umožnit uživateli klikat na tlačítka zpět a vpřed v prohlížeči.
+/--code js
+let store;
+const canvas = document.getElementById("scene");
+const engine = new BABYLON.Engine(canvas, true);
+const scene = createScene(canvas, engine, ()=>store);
+
+engine.runRenderLoop(function () {
+    scene.render();
+});
+
 window.addEventListener("resize", function () {
     engine.resize();
 });
@@ -125,29 +152,12 @@ function initializeStore() {
     store.subscribe(render);
     render();
 
-
-    ReactDOM.render(
-        <Provider store={store}>
-            <Root />
-        </Provider>,
-        root
-    )
 }
-window.onpopstate = initializeStore;
 initializeStore();
 
-
-
-
-
-
-
-
-
-
-
-
-
+//Zde posloucháme, zda uživatel klikl na tlačítko zpět či vpřed.
+window.onpopstate = initializeStore;
+\--
 
 
 Rozdělanou hru si můžeš stáhnout pod článkem, nebo jít do "Git repozitáře":https://github.com/hejny/web-game kde najdeš nejnovější verzi.
