--- a/articles/3.md
+++ b/articles/3.md
@@ -161,4 +161,4 @@ index.html
 \--
 
 Rozdělanou hru si můžeš stáhnout pod článkem, nebo jít do "Git repozitáře":https://github.com/hejny/web-game kde najdeš nejnovější verzi.
-V dalším díle ukáži, jaké featury díky tomu mohu docílit.
+V "dalším díle":https://www.itnetwork.cz/javascript/3d-hra/zpet-a-vpred ukáži, jaké featury díky tomu mohu docílit.
