--- a/articles/4.md
+++ b/articles/4.md
@@ -41,7 +41,7 @@ Nyní se po každé akci do konzole prohlížeče vypíše, co se stalo + stav p
 
 
 ##URL
-Ve webové aplikaci by bylo rozumné, aby se každá změna zaznamenávala do URL adresy v prohlížeči. Do URL však nemůžeme uložit příloš mnoho informací a tak můžeme stav ukládat do LocalStorage pod náhodným IDčkem a až dané ID dávat do URL adresy.
+Ve webové aplikaci by bylo dobré, aby se každá změna stavu zaznamenávala do URL adresy v prohlížeči. Do URL však nemůžeme uložit příliš mnoho informací a tak můžeme stav ukládat do LocalStorage pod unikátním IDčkem a dané ID dávat do URL adresy.
 
 /--code js
 function loadState(key){
@@ -121,7 +121,63 @@ window.addEventListener("resize", function () {
 
 
 ##Zpět a vpřed
-Nyní ukládáme stav do URL a při načtení hry ho z něj načítáme, ale pokud chceme URL plně využít, musíme umožnit uživateli klikat na tlačítka zpět a vpřed v prohlížeči.
+Nyní ukládáme stav do URL adresy a při načtení hry ho z něj načítáme. Pokud chceme plně využít potenciál webové aplikace, musíme umožnit uživateli klikat na tlačítka zpět a vpřed v prohlížeči.
+/--code js
+let store;
+const canvas = document.getElementById("scene");
+const engine = new BABYLON.Engine(canvas, true);
+const scene = createScene(canvas, engine, ()=>store);
+
+engine.runRenderLoop(function () {
+    scene.render();
+});
+
+window.addEventListener("resize", function () {
+    engine.resize();
+});
+
+function render() {
+    updateScene(scene, store.getState());
+}
+
+//store vytvořím na začátku + vždy když uživatel klikne na zpět nebo vpřed vytvořím store nový a nahradím jím store původní.
+function initializeStore() {
+    store = Redux.createStore(wrapReducer(stateReducer), createStateFromUri(document.location.toString()));
+    store.subscribe(()=> {
+        const state = store.getState();
+        const uri = createUriFromState(state);
+        history.pushState({}, document.title, uri);
+    });
+    store.subscribe(render);
+    render();
+
+}
+initializeStore();
+
+//Zde posloucháme, zda uživatel kliknul na tlačítko zpět či vpřed.
+window.onpopstate = initializeStore;
+\--
+
+##Titulek
+Na to, aby naše hra naplno využívala historii prohlížeče, už sta4í měnit titulek podle aktuálního stavu.
+Vytvoříme proto funkci, která vyrábí ze stavu titulek stránky.
+/--code js
+const WEB_NAME = 'Simple web game';
+const TITLE_SEPARATOR = ' | ';
+
+function createTitleFromState(state) {
+    let titleParts = [];
+
+    if (state.blocks.length> 1) {
+        titleParts.push(state.blocks.length + ' blocks world');
+    }
+    titleParts.push(WEB_NAME);
+
+    return titleParts.join(TITLE_SEPARATOR);
+}
+\--
+
+A tuto funkci při každé změně stavu využijeme.
 /--code js
 let store;
 const canvas = document.getElementById("scene");
@@ -141,7 +197,10 @@ function render() {
 }
 
 function initializeStore() {
-    store = createStore(wrapReducer(stateReducer), createStateFromUri(document.location.toString()));
+    const initialState = createStateFromUri(document.location.toString());
+    document.title = createTitleFromState(initialState);
+    store = Redux.createStore(wrapReducer(stateReducer), initialState);
+
     store.subscribe(()=> {
         const state = store.getState();
         const uri = createUriFromState(state);
@@ -151,14 +210,11 @@ function initializeStore() {
     });
     store.subscribe(render);
     render();
-
 }
 initializeStore();
 
-//Zde posloucháme, zda uživatel klikl na tlačítko zpět či vpřed.
 window.onpopstate = initializeStore;
 \--
-
 
 Rozdělanou hru si můžeš stáhnout pod článkem, nebo jít do "Git repozitáře":https://github.com/hejny/web-game kde najdeš nejnovější verzi.
 V dalším díle ukáži, jak jednotlivé Javascriptové soubory spojit pomocí nástroje WebPack.
