--- a/articles/4.md
+++ b/articles/4.md
@@ -159,7 +159,7 @@ window.onpopstate = initializeStore;
 \--
 
 ##Titulek
-Na to, aby naše hra naplno využívala historii prohlížeče, už sta4í měnit titulek podle aktuálního stavu.
+Na to, aby naše hra naplno využívala historii prohlížeče, už stačí měnit titulek podle aktuálního stavu.
 Vytvoříme proto funkci, která vyrábí ze stavu titulek stránky.
 /--code js
 const WEB_NAME = 'Simple web game';
