--- a/articles/3.md
+++ b/articles/3.md
@@ -148,13 +148,13 @@ Vzhledem k tomu, že se nám začíná projekt rozrůstat, rozdělil jsem ho do 
 src
     script
         scene
-            create-scene.js
-            update-scene.js
+            create-scene.ts
+            update-scene.ts
         state
             default-state.js
         state-reducers
             state-reducer.js
-        browser.js
+        browser.tsx
     style
         index.css
 index.html
